# cot_analyzer

./: .gitignore  README.md  freezing  main.py  requirements.txt  to_do
.github/workflows/: cot_analyzer.yml
cot_analyzer-main-GIT/: Annual.TXT  PROJECT_PLAN.md  main.py  pyproject.toml  requirements.txt  to_do
cot_analyzer-main-GIT/.github/workflows/: cot_analyzer.yml
cot_analyzer-main-GIT/cot_analyzer/analysis/: proximity.py  signals.py
cot_analyzer-main-GIT/cot_analyzer/data/: price_fetcher.py
cot_analyzer-main-GIT/cot_analyzer/display/: charts.py  exporter.py
cot_analyzer-main-GIT/cot_analyzer/display/templates/: cot_report.tex.j2
cot_analyzer-main-GIT/cot_analyzer/utils/: constants.py  helpers.py
cot_analyzer-main-GIT/docs/: methodology.md
cot_analyzer-main-GIT/user_input/: instruments+.csv  instruments.csv
cot_analyzer/analysis/: calculator.py
cot_analyzer/config/: loader.py
cot_analyzer/data/: fetcher.py  hist_fetcher.py  parser.py  price_fetcher.py
cot_analyzer/display/: charts.py  latex_report.py  tables.py
tests/: test_calculator.py
tools/: run_batch.py
user_input/: batch_demo.csv  batching.csv  instruments.csv  user_config.csv
