[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "cot-analyzer"
version = "1.0.0"
description = "Larry Williams COT Analysis — independent of TradingView"
requires-python = ">=3.10"
dependencies = [
    "cot-reports>=0.1.3",
    "pandas>=2.0",
    "numpy>=1.24",
    "rich>=13.0",
    "requests>=2.31",
    "pyarrow>=14.0",
    "plotly>=5.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov"]

[tool.setuptools.packages.find]
where = ["."]
include = ["cot_analyzer*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
